@@ -1,15 +1,11 @@
 package com.ipang.wansha.dao.impl;
 
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.text.ParseException;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.util.ArrayList;
-import java.util.Date;
-import java.util.HashMap;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
 
-import org.apache.http.HttpResponse;
 import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
@@ -17,10 +13,7 @@ import org.json.JSONObject;
 import com.ipang.wansha.dao.ProductDao;
 import com.ipang.wansha.dao.ReviewDao;
 import com.ipang.wansha.enums.Currency;
-import com.ipang.wansha.enums.TimeUnit;
-import com.ipang.wansha.model.City;
 import com.ipang.wansha.model.Product;
-import com.ipang.wansha.model.TripHour;
 import com.ipang.wansha.utils.Const;
 import com.ipang.wansha.utils.RestUtility;
 import com.ipang.wansha.utils.Utility;
@@ -28,194 +21,130 @@ import com.ipang.wansha.utils.Utility;
 public class ProductDaoImpl implements ProductDao {
 
 	private ReviewDao reviewDao;
-	private RestUtility utility;
-
 
 	public ProductDaoImpl() {
 		reviewDao = new ReviewDaoImpl();
-		utility = new RestUtility();
 	}
 
 	@Override
-	public List<Product> getProductList(String cityId)
-			throws URISyntaxException, InterruptedException,
-			ExecutionException, JSONException {
+	public List<Product> getProductList(int cityId) throws MalformedURLException,
+			InterruptedException, ExecutionException, JSONException {
 
 		List<Product> products = new ArrayList<Product>();
-		URI uri = new URI(Const.SERVERNAME + "/rest/city/" + cityId
-				+ "/product");
-		String result = utility.JsonGet(uri);
+		URL url = new URL(Const.SERVERNAME + "/product/plist.json?cityId="
+				+ cityId + "&top=50");
+		String result = RestUtility.GetJson(url);
 
-		if (result == null)
+		JSONObject jsonObject = null;
+		try {
+			jsonObject = new JSONObject(result);
+		} catch (JSONException e) {
+			e.printStackTrace();
 			return null;
-
-		JSONObject jsonObject = new JSONObject(result);
-
-		if (jsonObject.isNull("product"))
-			return null;
+		}
 
 		try {
-			JSONArray productList = jsonObject.getJSONArray("product");
+			JSONArray productList = jsonObject.getJSONArray("productList");
 			for (int i = 0; i < productList.length(); i++) {
 				JSONObject productJson = productList.getJSONObject(i);
 				products.add(createProduct(productJson));
 			}
 		} catch (JSONException e) {
-			JSONObject json = jsonObject.getJSONObject("product");
+			JSONObject json = jsonObject.getJSONObject("productList");
 			products.add(createProduct(json));
 		}
 		return products;
 	}
 
 	@Override
-	public int getProductCount(String cityId) throws URISyntaxException,
-			InterruptedException, ExecutionException {
-
-		URI uri = new URI(Const.SERVERNAME + "/rest/city/" + cityId
-				+ "/product/count");
-		String result = utility.TextGet(uri);
-		return Integer.parseInt(result);
-	}
-
-	@Override
-	public Product getProductDetail(String productId)
-			throws URISyntaxException, InterruptedException,
-			ExecutionException, JSONException {
-
-		URI uri = new URI(Const.SERVERNAME + "/rest/product/" + productId);
-		String result = utility.JsonGet(uri);
-
-		if (result == null)
-			return null;
-
-		JSONObject jsonObject = new JSONObject(result);
-
-		Product product = createProduct(jsonObject);
-
-		return product;
-	}
-
-	private Product createProduct(JSONObject json) throws JSONException,
-			URISyntaxException, InterruptedException, ExecutionException {
-
-		Product product = new Product();
-		product.setProductId(json.getString("productId"));
-		product.setProductName(json.getString("productName"));
-		product.setCurrency(Currency.fromString(json.getString("currency")));
-		product.setDuration(Float.parseFloat(json.getString("duration")));
-		product.setHighlight(json.getString("highlight"));
-		product.setMeetingAddress(json.getString("meetingAddress"));
-		product.setOverview(json.getString("overview"));
-		product.setPrice(Float.parseFloat(json.getString("price")));
-		product.setTimeUnit(TimeUnit.fromString(json.getString("timeUnit")));
-		product.setReviewCount(json.getInt("reviewCount"));
-		product.setReviewTotalRanking(json.getInt("reviewTotalRanking"));
-		product.setProductImages(getProductImages(json));
-		product.setStarCount(reviewDao.getRankingDetail(product.getProductId()));
-		return product;
-	}
-
-	private ArrayList<String> getProductImages(JSONObject json)
-			throws JSONException {
-		ArrayList<String> images = new ArrayList<String>();
-
-		if (json.isNull("productImages"))
-			return null;
-		
-		try {
-			JSONArray imageList = json.getJSONArray("productImages");
-			for (int i = 0; i < imageList.length(); i++) {
-				images.add(imageList.getString(i));
-			}
-
-		} catch (JSONException e) {
-			images.add(json.getString("productImages"));
-		}
-
-		return images;
-	}
-
-	@Override
-	public City getCityOfProduct(String productId) throws URISyntaxException,
+	public Product getProductDetail(int productId) throws MalformedURLException,
 			InterruptedException, ExecutionException, JSONException {
-		URI uri = new URI(Const.SERVERNAME + "/rest/product/" + productId
-				+ "/city");
-		String result = utility.JsonGet(uri);
 
-		if (result == null)
-			return null;
+		URL url = new URL(Const.SERVERNAME + "/product/" + productId + ".json");
+		String result = RestUtility.GetJson(url);
 
-		JSONObject jsonObject = new JSONObject(result);
-		City city = new City();
-		city.setCityId(jsonObject.getString("cityId"));
-		city.setCityName(jsonObject.getString("cityName"));
-		city.setInCountry(jsonObject.getString("inCountry"));
-		return city;
-	}
-
-	@Override
-	public List<TripHour> getTripTimeInDate(String productId, String dateStr) throws URISyntaxException, InterruptedException, ExecutionException, JSONException {
-
-		List<TripHour> timeList = new ArrayList<TripHour>();
-		URI uri = new URI(Const.SERVERNAME + "/rest/product/" + productId
-				+ "/available?date=" + dateStr);
-		String result = utility.JsonGet(uri);
-
-		if (result == null)
-			return null;
-		
-		JSONObject jsonObject = new JSONObject(result);
-
-		if (jsonObject.isNull("tripHour"))
-			return null;
-
+		JSONObject jsonObject = null;
 		try {
-			JSONArray jsonList = jsonObject.getJSONArray("tripHour");
-			for (int i = 0; i < jsonList.length(); i++) {
-				JSONObject timeJson = jsonList.getJSONObject(i);
-				timeList.add(createTripHour(timeJson));
-			}
+			jsonObject = new JSONObject(result);
 		} catch (JSONException e) {
-			JSONObject json = jsonObject.getJSONObject("tripHour");
-			timeList.add(createTripHour(json));
-		}
-
-		return timeList;
-	}
-
-	private TripHour createTripHour(JSONObject json) throws JSONException {
-		TripHour th = new TripHour();
-		th.setTripHourId(json.getString("tripHourId"));
-		try {
-			th.setStartTime(Utility.FormatString(json.getString("startTime")));
-		} catch (ParseException e) {
 			e.printStackTrace();
 			return null;
-		}		
-		th.setVacancy(json.getInt("vacancy"));
-		th.setPrice(Float.parseFloat(json.getString("price")));
-		
-		return th;
+		}
+
+		return createProduct(jsonObject);
 	}
 
-	@Override
-	public boolean bookTrip(String userId, String productId, Date startDate, int memberNo) throws URISyntaxException, InterruptedException, ExecutionException {
+	private Product createProduct(JSONObject json) {
 
-		if (userId == null || productId == null)
-			return false;
+		Product product = new Product();
+		try {
+			product.setProductId(json.getInt("id"));
+			product.setProductName(json.getString("productName"));
+			product.setProductType(json.getInt("productType"));
+		} catch (JSONException e) {
+			e.printStackTrace();
+			return null;
+		}
 
-		URI uri = new URI(Const.SERVERNAME + "/rest/user/" + userId + "/product/" + productId + "/booking");
-		HashMap<String, String> postParams = new HashMap<String, String>();
-		postParams.put("memberNo", memberNo + "");
-		postParams.put("time", Utility.FormatDateTime(startDate));
+		ArrayList<String> images = new ArrayList<String>();
+		try {
+			JSONArray imageList = json.getJSONArray("pictureList");
+			for (int i = 0; i < imageList.length(); i++) {
+				JSONObject imageJson = imageList.getJSONObject(i);
+				String imageUrl = imageJson.getString("path");
+				if (imageUrl.charAt(0) == '/')
+					imageUrl = Const.SERVERNAME + imageUrl;
+				images.add(imageUrl);
+			}
+		} catch (JSONException e) {
+			e.printStackTrace();
+		}
+		finally{
+			product.setProductImages(images);
+		}
 
-		HttpResponse response = utility.Post(uri, postParams);
-		if (response.getStatusLine().getStatusCode() == 201)
-			return true;
-		else
-			return false;
+		try {
+			JSONArray comboList = json.getJSONArray("comboList");
+			float lowest = Float.MAX_VALUE;
+			for (int i = 0; i < comboList.length(); i++) {
+				JSONObject priceJson = comboList.getJSONObject(i);
+				float price = (float) priceJson.getDouble("price");
+				product.setCurrency(Currency.fromString(priceJson
+						.getString("currency")));
+				if (price < lowest)
+					lowest = price;
+			}
+			product.setPrice(lowest);
+		} catch (JSONException e) {
+			e.printStackTrace();
+			product.setPrice(0);
+		}
+
+		try {
+			product.setDetail(Utility.formatText(json.getString("detail")));
+		} catch (JSONException e) {
+			e.printStackTrace();
+		}
 		
+		try {
+			product.setExpenseDescr(Utility.formatText(json.getString("expenseDescr")));
+		} catch (JSONException e) {
+			e.printStackTrace();
+		}
 		
+		try {
+			product.setInstruction(Utility.formatText(json.getString("instruction")));
+		} catch (JSONException e) {
+			e.printStackTrace();
+		}
+		
+		try {
+			product.setOrderDescr(Utility.formatText(json.getString("orderDescr")));
+		} catch (JSONException e) {
+			e.printStackTrace();
+		}
+
+		return product;
 	}
 
 }
